--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,10 @@
 * {
     box-sizing: border-box;
-    padding: 40;
-    margin: 40;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-    position: static;
     background-color: #d9dcd6;
 }
 
@@ -16,30 +15,34 @@ body {
     color: #ffffff;
 }
 
+.headerContainer {
+    display:flex;
+    justify-content:space-between;
+}
+
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
 .header h1 .seo {
-   color: #d9dcd6;
+    color: #d9dcd6;
 }
 
-.header div {
-    padding-top: 15px;
+
+.list {
+    display:flex;
+    font-family: 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction:row;
+}
+
+li {
+    display:inline;
+    list-style-type: style type none;
     margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
 }
 
 a {
@@ -55,8 +58,8 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("./images/digital-marketing-meeting.jpg");
-    background-size:cover;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
     background-position: center;
 }
 
@@ -87,35 +90,22 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+
+
+.benefit-lead h3, 
+.brand h3,  
+.cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
 .benefit-lead img {
     display: block;
@@ -162,32 +152,24 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.search-engine-optimization img,
+.online-reputation-management img, 
+.social-media-marketing img   {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
 
-.social-media-marketing img {
-    max-height: 200px;
-}
 
-.search-engine-optimization h2 {
+.search-engine-optimization h2,
+.online-reputation-management h2,
+.social-media-marketing h2
+
+ {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
