--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
 .list {
     display:flex;
     font-family: 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     justify-content: flex-end;
     align-items: center;
     flex-direction:row;
@@ -100,8 +100,8 @@ p {
 
 
 .benefit-lead h3, 
-.brand h3,  
-.cost h3 {
+.benefit-brand h3,  
+.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
